# egui_glfw_gl2

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/shaders/: egui.glsl
examples/: demo.rs  triangle.rs
examples/data/: mod.rs  myui.rs
src/: egui_shader.rs  glfw_window.rs  lib.rs  painter.rs  shader.rs  timer.rs  triangle.rs
src/gui/: mod.rs  raw_input_translate.rs  ui_context.rs  ui_input.rs  ui_render.rs  ui_texture.rs
